# libnds_template

./: .gitignore  CMakeLists.txt  Makefile
include/: main.h
source/: main.cpp
